add_subdirectory(animation)
add_subdirectory(callback)
add_subdirectory(cameraLight)
add_subdirectory(clippingPlane)
add_subdirectory(constrainedCamera)
add_subdirectory(constrainedFrame)
add_subdirectory(drawLight)
add_subdirectory(fastDraw)
add_subdirectory(frameTransform)
add_subdirectory(frustumCulling)
add_subdirectory(interface)
add_subdirectory(keyboardAndMouse)
add_subdirectory(keyFrames)
add_subdirectory(luxo)
add_subdirectory(manipulatedFrame)
add_subdirectory(mouseGrabber)
add_subdirectory(multiSelect)
add_subdirectory(multiView)
add_subdirectory(overpainting)
add_subdirectory(screenCoordSystem)
add_subdirectory(select)
add_subdirectory(simpleViewer)
add_subdirectory(standardCamera)
add_subdirectory(stereoViewer)
